--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,11 @@
 MAX_BOT = 9999
-DEVS = 7785761289,6616561731
-API_ID = 7785761289,6616561731
-API_HASH = 16e57cb1d4c5f250cb5f3a28646f0e4b
-BOT_TOKEN = 7484735963:AAHOes61aoLKtReR4HpXxaB8OHTLNJHRG7s
-OWNER_ID = 7785761289,6616561731
+DEVS = 8463333178
+API_ID = 28473241
+API_HASH = c3df70b867a0e65eed5419cecdd5a5bd
+BOT_TOKEN = 8361538579:AAGc-5yshJZIw676SBljk54hh59B2Lj873U
+OWNER_ID = 8463333178
 BLACKLIST_CHAT = -1002399953106
-RMBG_API = a6qxsmMJ3CsNo7HyxuKGsP1o
-MONGO_URL = mongodb://localhost:27017
-LOGS_MAKER_UBOT = 5351355388
-USER_GROUP = @roomhoreamm
+RMBG_API = twjWqdXoykgR4cKojWMobMjD
+MONGO_URL = mongodb+srv://orkutp87_db_user:ambasing101@cluster0.c6jldnj.mongodb.net/
+LOGS_MAKER_UBOT = 8463333178
+USER_GROUP = @rpkaii
